syntax = "proto3";

package profile;

option go_package = "/proto";


// Сервис профилей

// Сообщение профиля
message Profile {
  string id = 1;           // ID профиля
  string user_id = 2;      // ID пользователя
  string first_name = 3;   // Имя
  string last_name = 4;    // Фамилия
  string middle_name = 5;  // Отчество
  string phone = 6;        // Телефон
  string address = 7;      // Адрес
  string birthday = 8;     // День рождения
  string created_at = 9;
  string updated_at = 10;
}

service ProfileService {
  // Получение профиля по токену
  rpc GetProfileByToken(GetProfileByTokenRequest) returns (GetProfileByTokenResponse);
}

// Запрос для получения профиля через токен
message GetProfileByTokenRequest {
  string token = 1; // JWT токен
}

// Ответ с данными профиля
message GetProfileByTokenResponse {
  Profile profile = 1;  // Вложенный объект профиля
  string error = 2;     // Сообщение об ошибке
}

message ValidateTokenResponse {
  bool is_valid = 1; // Валидность токена
  string user_id = 2; // ID пользователя
}

//service ProfileService {
//  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
//  rpc CreateProfile(CreateProfileRequest) returns (CreateProfileResponse);
//}
//
//message GetProfileRequest {
//  string user_id = 1;
//}
//
//message GetProfileResponse {
//  string id = 1;
//  string first_name = 2;
//  string last_name = 3;
//  string middle_name = 4;
//  string phone = 5;
//  string address = 6;
//  string birthday = 7;
//  map<string, string> additional_data = 8;
//  string created_at = 9;
//  string updated_at = 10;
//}
//
//message CreateProfileRequest {
//  string user_id = 1;
//  string first_name = 2;
//  string last_name = 3;
//  string middle_name = 4;
//  string phone = 5;
//  string address = 6;
//  string birthday = 7;
//  map<string, string> additional_data = 8;
//}
//
//message CreateProfileResponse {
//  string id = 1;
//  string created_at = 2;
//  string updated_at = 3;
//}